--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    android {
+        lintOptions {
+            disable 'RtlHardcoded', 'RtlSymmetry'
+            abortOnError false
+        }
+
+    }
 }
 
 dependencies {
