--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.android.support:palette-v7:23.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
