--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="false"
@@ -18,9 +19,17 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <!--<action android:name="android.intent.action.VIEW"/>-->
 
+                <!--<category android:name="android.intent.category.BROWSABLE"/>-->
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <!-- Accepts URIs that begin with "https://www.themoviedb.org/movie” -->
+                <!--<data-->
+                <!--android:host="www.themoviedb.org"-->
+                <!--android:pathPrefix="/movie"-->
+                <!--android:scheme="https"/>-->
             </intent-filter>
+
         </activity>
         <activity
             android:name=".activities.MovieDetailsActivity"
